--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no tests are implemented yet \" && exit 1"
+    "test": "jest",
+    "coveralls": "coveralls"
   },
-  "author": "",
+  "author": "Jaakko Nikkilä, Paavo Jyrkiäinen",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "coveralls": "^3.1.1",
+    "jest": "^29.7.0"
+  }
 }
